fix: align SVG icons vertically in file upload dropzones

--- a/packages/components/file-upload/multiple-file-upload.component.scss
+++ b/packages/components/file-upload/multiple-file-upload.component.scss
@@ -193,6 +193,12 @@
         }
     }
 
+    .kbq-file-upload__dropzone-icon {
+        > svg {
+            vertical-align: bottom;
+        }
+    }
+
     .kbq-multiple-file-upload__empty-state {
         --kbq-empty-state-size-normal-image-margin-bottom: var(--kbq-size-m);
         --kbq-empty-state-size-normal-title-margin-bottom: var(--kbq-size-xs);
